--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,9 +1,20 @@
 <!doctype>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+     <!-- <link rel="stylesheet" href="./css/default.css"> -->
+     <!-- <link rel="stylesheet" href="./css/layout.css">
+     <link rel="stylesheet" href="./css/media-queries.css">
+     <link rel="stylesheet" href="./css/magnific-popup.css"> -->
+
+    <title>Marc Zaharescu React CV App</title>
+
     <body>
       <div id="app" >
-        <input></input>
     </div>
     </body>
     <script src ="./bundle.js"></script>
